@@ -1,3 +1,7 @@
+09-24-2007  Valek Filippov  <frob@df.ru>
+
+    * wmftext.py: Added reencoding of text from font encoding to UTF-8.
+    
 09-23-2007  Valek Filippov  <frob@df.ru>
 
     * wmfdraw.py, emfdraw.py, emfcmd.py: Added IntersectClipRegion.
